--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.1.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <version>2.2.13.RELEASE</version>
     </parent>
     <groupId>com.jay.lee</groupId>
     <artifactId>excel</artifactId>
@@ -18,6 +17,7 @@
         <lombok.version>1.18.10</lombok.version>
         <poi.version>4.1.1</poi.version>
         <jexl.version>2.1.1</jexl.version>
+        <springfox.swagger2.version>2.9.2</springfox.swagger2.version>
         <fastjson.version>1.2.62</fastjson.version>
     </properties>
 
@@ -74,12 +74,17 @@
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
-            <version>2.9.2</version>
+            <version>${springfox.swagger2.version}</version>
         </dependency>
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
-            <version>2.9.2</version>
+            <version>${springfox.swagger2.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>swagger-bootstrap-ui</artifactId>
+            <version>1.9.6</version>
         </dependency>
     </dependencies>
 
